fixed some broken css

--- a/src/components/CourseItem/CourseItem.css
+++ b/src/components/CourseItem/CourseItem.css
@@ -1,19 +1,13 @@
-/* CourseItem.css */
-
 .courseHeader {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; positions course name on the left and date on the right */
-  align-items: flex-start; /* vertically aligns them in case they have different heights */
-  padding: 0 16px; /* same padding as CardContent for consistency */
-  font-size: 40px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0 16px;
+  font-size: 30px;
 }
 
 .courseName {
   display: flex;
-  /* justify-content: space-between; */
-}
-
-.courseLocation {
-  /* styles for date */
+  justify-content: space-between;
 }
